# NewNeuralNetwork

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  _clang-format  config.json  run.sh
scripts/: build-debug.sh  build-production.sh  build-release.sh  format.sh  run-debug.sh  run-production.sh  run-release.sh  run-tests.sh
src/: CMakeLists.txt  Main.cpp  NewNeuralNetworkProgram.cpp
src/lib/: CMakeLists.txt  Math.cpp  Math.hpp
src/lib/core/: CrossEntropyWithSoftmax.cpp  CrossEntropyWithSoftmax.hpp  DataLoader.cpp  DataLoader.hpp  DenseLayer.cpp  DenseLayer.hpp  IActivationFunction.hpp  ILayer.hpp  ILossFunction.hpp  IOutputLayer.hpp  IWeightInitializer.hpp  LeakyReLU.cpp  LeakyReLU.hpp  MSE.cpp  MSE.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  NormalGlorotWeightInitializer.cpp  NormalGlorotWeightInitializer.hpp  NormalHeWeightInitializer.cpp  NormalHeWeightInitializer.hpp  ReLU.cpp  ReLU.hpp  Softmax.cpp  Softmax.hpp  SoftmaxDenseOutputLayer.cpp  SoftmaxDenseOutputLayer.hpp  TestDataSoftmaxEvaluator.cpp  TestDataSoftmaxEvaluator.hpp  TrainingDataset.cpp  TrainingDataset.hpp
src/lib/core/tests/: NeuralNetworkWorkflows.test.cpp  TestableNeuralNetwork.hpp  circleTestFeatures.csv  circleTrainingFeatures.csv  circleTrainingLabels.csv  xorTestLabels.csv  xorTrainingLabels.csv  xorValidationFeatures.csv
src/lib/core/utils/: Timer.hpp
src/lib/io/: CSVLabelWriter.cpp  CSVLabelWriter.hpp  CSVReader.cpp  CSVReader.hpp  Config.cpp  Config.hpp  IReader.hpp  IWriter.hpp  IoError.hpp
src/lib/io/tests/: CSVReader.test.cpp  testData.csv  testDataInvalid.csv  testDataSemicolon.csv
src/lib/math/: ColumnMajorFloatMatrixIterator.cpp  ColumnMajorFloatMatrixIterator.hpp  FloatMatrix.cpp  FloatMatrix.hpp  FloatMatrixInvalidDimensionException.hpp  Math.cpp  Math.hpp  RowMajorFloatMatrixIterator.cpp  RowMajorFloatMatrixIterator.hpp
src/lib/math/tests/: FloatMatrix.benchmark.cpp  FloatMatrix.test.cpp  Math.test.cpp
